# hmgchallenge

./: README.md
3d_object_detection/: CMakeLists.txt  cluster.launch  cluster_para.yaml  package.xml
3d_object_detection/include/3d_object_detection/: temp.txt
3d_object_detection/scripts/: homography.py  make_BEV.py
3d_object_detection/src/: cloud_visualize.cpp  main.cpp
decision_module/: CMakeLists.txt  package.xml
object_cluster/: CMakeLists.txt  cluster.launch  cluster_para.yaml  package.xml
object_cluster/include/: cloud_visualize.h  cluster_class.h
object_cluster/src/: cluster_class.cpp
path_planning/: CMakeLists.txt  frenet_optimal_trajectory.launch  frenet_optimal_trajectory.yaml  package.xml
path_planning/include/: car.h  cpp_struct.h  cubic_spline_1d.h  cubic_spline_2d.h  frenet_optimal_trajectory.h  frenet_path.h  obstacle.h  quartic_polynomial.h  quintic_polynomial.h  utils.h
path_planning/src/: car.cpp  cubic_spline_1d.cpp  cubic_spline_2d.cpp  frenet_optimal_trajectory.cpp  frenet_path.cpp  main.cpp  obstacle.cpp  quartic_polynomial.cpp  quintic_polynomial.cpp
